Update Firebase config to use newly created database

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         import { getDatabase, ref, set, update, onValue, get, remove } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyBojT0CzNy5JIBwOZ-RJhufBLv5tIZikwA",
-            authDomain: "memory-game-f25ab.firebaseapp.com",
-            databaseURL: "https://memory-game-f25ab-default-rtdb.firebaseio.com",
-            projectId: "memory-game-f25ab",
-            storageBucket: "memory-game-f25ab.appspot.com",
-            messagingSenderId: "58349546482",
-            appId: "1:58349546482:web:bd2979a9d05b0aeaee996b"
+            apiKey: "AIzaSyA55pEQJnWoWeNvBMoLsUhYXrX6g1iioKw",
+            authDomain: "memory-card-game-e97ae.firebaseapp.com",
+            databaseURL: "https://memory-card-game-e97ae-default-rtdb.firebaseio.com",
+            projectId: "memory-card-game-e97ae",
+            storageBucket: "memory-card-game-e97ae.firebasestorage.app",
+            messagingSenderId: "787141058573",
+            appId: "1:787141058573:web:0a53e83578d21fe512f544"
         };
 
         const app = initializeApp(firebaseConfig);
