feat: Enhance multiplayer UX with presence detection, animations, and feedback
- Add Firebase presence system with onDisconnect handlers
- Fix button stuck state (Creating... → Waiting for Player 2...)
- Implement real-time opponent connection status monitoring
- Add toast notification system with slide-in animations
- Add shake animation feedback for invalid card clicks
- Enhance card flip with smooth 3D animations and shadows
- Improve connection status UI with pulsing indicator
- Add visual feedback for opponent disconnection

--- a/index.html
+++ b/index.html
@@ -73,8 +73,13 @@
         <div id="game-screen" class="screen">
             <!-- Connection Status -->
             <div id="connection-status" class="connection-status" style="display: none;">
-                <span id="status-text">🟢 Connected</span>
+                <span id="status-icon">🟢</span>
+                <span id="status-text">Connected</span>
+                <span id="opponent-status" style="margin-left: 10px;"></span>
             </div>
+
+            <!-- Toast Notification Container -->
+            <div id="toast-container"></div>
 
             <!-- Game Stats -->
             <div class="game-stats">
